Fixed #dealer-cards top distance, basic #message style + animation, fixed buttons height, fixed background gradient issue on iOS.

--- a/css/_utils.scss
+++ b/css/_utils.scss
@@ -13,10 +13,12 @@
   	@mixin gradient-top-bottom ( $top, $bottom ) {
   		background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0, $bottom), color-stop(1, $top));
   		background-image: -moz-linear-gradient( center bottom, $bottom 0%, $top 100%);
+  		
   	}
   	
   	@mixin gradient-radial ( $center, $edge, $size:farthest-corner ) {
-  		background-image: -webkit-radial-gradient(center center, ellipse $size, $center, $edge );
+  	  background-image: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 260, from($center), to($edge));
+      background-image: -webkit-radial-gradient(center center, ellipse $size, $center, $edge );
   		background-image: -moz-radial-gradient(center center, ellipse $size, $center, $edge );
   		background-image: -ms-radial-gradient(center center, ellipse $size, $center, $edge );
   		background-image: -o-radial-gradient(center center, ellipse $size, $center, $edge );
